2003-12-27  Shiro Kawai  <shiro@acm.org>

	* src/kahua/gsid.scm (make-worker-id), 
	  src/kahua/session.scm (make-cont-key): changed to use base-36
	  numbers instead of base-10, to shorten the key.

	* src/kahua/test/worker.scm : refactored out common procedures for
	  testing worker scripts.

	* src/kahua/test/xml.scm : test-* procedures (i.e. the ones to be
	  used in the last arg of test and test*) now returns *test-error*
	  when it receives *test-error*; attempting to parse *test-error*
	  results hard-to-track error messages.

	* test/worker.scm, test/lambdabooks.scm, test/wiki-iki.scm :
	  revised to use kahua.test.worker.

2003-12-26  Shiro Kawai  <shiro@acm.org>

	* examples/wiki-iki/* : added another example: simple wiki

2003-12-27  Koichi Sasada <sasada@namikilab.tuat.ac.jp>

	* src/kahua/config.scm(kahua-init): add "skip-check?" optional argument
	  to solve this problem:
	  http://www.kahua.org/mlarchive/kahua-dev/msg00142.html

2003-12-26  Shiro Kawai  <shiro@acm.org>

	* src/kahua-server.in : Let *.kahua be loaded in a separate module
	  kahua-app-server, which imports kahua and kahua-server by default.
	  This separation prevents accidental interference between kahua-server
	  code and *.kahua, and also avoid issues about module "use" ordering
	  (i.e. there was a case that the order of "use" of *.kahua wasn't
	  really the order of imports, since some modules were already loaded
	  in kahua-server code.  With this change, *.kahua has full control
	  over the order of imports).

	* src/kahua/html.scm (form/cont) : same change as a/cont, i.e.
	  using PATH_INFO to pass session key instead of x-kahua-cgsid.

	* test/lambdabooks.scm, test/worker.scm : adapted to form/cont change.

	* test/worker.scm : added back the code to clean up the test
	  worker process after each test section.

2003-12-25  Shiro Kawai  <shiro@acm.org>

	* src/kahua-spvr.in : added "restart" spvr command to restart
	  specified worker, for the convenience of development.
