@@ -1,3 +1,9 @@
+2003-12-28  Shiro Kawai  <shiro@acm.org>
+
+	* cgi/kahua.cgi.in (send-reply) : pass PATH_INFO information (after
+	  removing ~user) to the server via "x-kahua-path-info" header
+	  field.
+
 2003-12-27  Shiro Kawai  <shiro@acm.org>
 
 	* src/kahua/gsid.scm (make-worker-id), 
